--- a/Iniciante/POO/.classpath
+++ b/Iniciante/POO/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="POO1"/>
 	<classpathentry kind="src" path="POO2"/>
 	<classpathentry kind="src" path="POO3"/>
+	<classpathentry kind="src" path="POO4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
