--- a/Iniciante/POO/.classpath
+++ b/Iniciante/POO/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="src" path="POO3"/>
 	<classpathentry kind="src" path="POO4"/>
 	<classpathentry kind="src" path="POO5"/>
+	<classpathentry kind="src" path="POO6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
