--- a/Projeto Java - 1/WorkSpace/.project
+++ b/Projeto Java - 1/WorkSpace/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Intermediario</name>
+	<name>WorkSpace</name>
 	<comment></comment>
 	<projects>
 	</projects>
